--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="flex-center flex-column animated fadeIn">
             <h1 class="mb-1">欢迎来到黄金镇</h1>
 
-            <a target="_blank" href="https://goldentown.github.io/apk/1.0.jpg" class="btn btn-primary mb-2">下载android客户端</a>
+            <a target="_blank" href="https://diettgoheer.github.io/goldentown/apk/1.0.jpg" class="btn btn-primary mb-2">下载android客户端</a>
 
             <h5 class="mb-1">感谢您的使用，我们将与你同在!</h5>
 
